// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/user-billings/index.vue doAction api server response 400 download invoices should display errors when error occurred in useUserBillingFileDownloader.downloadInvoices 1`] = `
<div
  class="v-alert__content"
>
              不正なidが含まれています。
  <br />
              発行日が不正です。
  <br />
</div>
`;

exports[`pages/user-billings/index.vue doAction api server response 400 download notices should display errors when error occurred in useUserBillingFileDownloader.downloadNotices 1`] = `
<div
  class="v-alert__content"
>
              不正なidが含まれています。
  <br />
              発行日が不正です。
  <br />
</div>
`;

exports[`pages/user-billings/index.vue doAction api server response 400 download receipts should display errors when error occurred in useUserBillingFileDownloader.downloadReceipts 1`] = `
<div
  class="v-alert__content"
>
              不正なidが含まれています。
  <br />
              発行日が不正です。
  <br />
</div>
`;

exports[`pages/user-billings/index.vue doAction api server response 400 download statements should display errors when error occurred in useUserBillingFileDownloader.downloadStatements 1`] = `
<div
  class="v-alert__content"
>
              不正なidが含まれています。
  <br />
              発行日が不正です。
  <br />
</div>
`;

exports[`pages/user-billings/index.vue doAction api server response 400 should display errors when server responses 400 Bad Request call $api.userBillings.depositRegistration 1`] = `
<div
  class="v-alert__content"
>
              不正なidが含まれています。
  <br />
              入金日が不正です。
  <br />
</div>
`;

exports[`pages/user-billings/index.vue doAction api server response 400 should display errors when server responses 400 Bad Request call $api.userBillings.depositRegistration 2`] = `
<div
  class="v-alert__content"
>
              不正なidが含まれています。
  <br />
</div>
`;

exports[`pages/user-billings/index.vue doAction api server response 400 should display errors when server responses 400 Bad Request call $api.withdrawalTransactions.create 1`] = `
<div
  class="v-alert__content"
>
              不正なidが含まれています。
  <br />
</div>
`;

exports[`pages/user-billings/index.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object]"
  class="z-page-stub"
  data-page-user-billings-index=""
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <div
    class="root"
    data-table=""
    data-z-data-table=""
  >
    <!---->
    <v-card-stub
      class="py-4"
      loaderheight="4"
      tag="div"
    >
      <div
        class="v-data-table v-data-table--has-top theme--light table clickable"
        data-desktop-table=""
      >
        <v-container-stub
          tag="div"
        >
          <transition-stub
            mode="out-in"
            name="fade"
          >
            <form
              class="v-form"
              novalidate="novalidate"
            >
              <v-row-stub
                class="mt-1 mt-sm-0"
                tag="div"
              >
                <v-col-stub
                  class="py-0"
                  cols="12"
                  tag="div"
                >
                  <div
                    class="v-alert text-caption text-sm-body-2 v-sheet theme--dark v-alert--dense error"
                    role="alert"
                    style="display: none;"
                  >
                    <div
                      class="v-alert__wrapper"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark"
                      />
                      <div
                        class="v-alert__content"
                      >
                検索結果が 1,000 件を超えているため表示できません。
                        <br />
                検索条件を追加してしてください。
                      </div>
                    </div>
                  </div>
                </v-col-stub>
              </v-row-stub>
              <v-row-stub
                tag="div"
              >
                <v-col-stub
                  cols="12"
                  md="4"
                  sm="6"
                  tag="div"
                  xl="3"
                >
                  <div
                    class="v-input v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select v-autocomplete"
                    clearable="true"
                    hide-details=""
                    label="事業所"
                    prepend-icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
                    value=""
                  >
                    <div
                      class="v-input__prepend-outer"
                    >
                      <div
                        class="v-input__icon v-input__icon--prepend"
                      >
                        <span
                          aria-hidden="true"
                          class="v-icon notranslate theme--light"
                        >
                          <svg
                            aria-hidden="true"
                            class="v-icon__svg"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="v-input__slot"
                        role="combobox"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: absolute;"
                          >
                            事業所
                          </label>
                          <input
                            autocomplete="off"
                            type="text"
                          />
                          <div
                            class="v-input__append-inner"
                          >
                            <div />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </v-col-stub>
                <v-col-stub
                  cols="12"
                  md="4"
                  sm="6"
                  tag="div"
                  xl="3"
                >
                  <div
                    class="z-date-field"
                    hide-details=""
                    prepend-icon="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z"
                  >
                    <div
                      class="v-input v-input--hide-details v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                    >
                      <div
                        class="v-input__prepend-outer"
                      >
                        <div
                          class="v-input__icon v-input__icon--prepend"
                        >
                          <span
                            aria-hidden="true"
                            class="v-icon notranslate theme--light"
                          >
                            <svg
                              aria-hidden="true"
                              class="v-icon__svg"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                        >
                          <fieldset
                            aria-hidden="true"
                          >
                            <legend
                              style="width: 0px;"
                            >
                              <span
                                class="notranslate"
                              >
                                ​
                              </span>
                            </legend>
                          </fieldset>
                          <div
                            class="v-text-field__slot"
                          >
                            <label
                              class="v-label theme--light"
                              style="left: 0px; position: absolute;"
                            >
                              サービス提供年月
                            </label>
                            <input
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <v-dialog-stub
                      closedelay="0"
                      contentclass=""
                      data-z-date-field-dialog=""
                      opendelay="0"
                      origin="center center"
                      retainfocus="true"
                      transition="dialog-transition"
                      width="290px"
                    >
                      <v-date-picker-stub
                        data-z-date-field-picker=""
                        dayformat="[Function]"
                        eventcolor="warning"
                        firstdayofweek="1"
                        headerdateformat="[Function]"
                        locale="ja-JP"
                        localefirstdayofyear="0"
                        max="2028-05-17"
                        min="1920-01-01"
                        nexticon="$next"
                        nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                        nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                        notitle="true"
                        previcon="$prev"
                        prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                        prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                        selecteditemstext="$vuetify.datePicker.itemsSelected"
                        showcurrent="true"
                        titledateformat="[Function]"
                        type="month"
                        width="290"
                        yearformat="[Function]"
                      >
                        <v-spacer-stub
                          tag="div"
                        />
                        <a
                          class="v-btn-stub"
                          color="primary"
                          data-z-date-field-button-clear=""
                          text=""
                        >
                          クリア
                        </a>
                        <a
                          class="v-btn-stub"
                          color="primary"
                          data-z-date-field-button-cancel=""
                          text=""
                        >
                          キャンセル
                        </a>
                      </v-date-picker-stub>
                    </v-dialog-stub>
                  </div>
                </v-col-stub>
                <v-col-stub
                  cols="12"
                  md="4"
                  sm="6"
                  tag="div"
                  xl="3"
                >
                  <div
                    class="z-date-field"
                    hide-details=""
                    prepend-icon="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z"
                  >
                    <div
                      class="v-input v-input--hide-details v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                    >
                      <div
                        class="v-input__prepend-outer"
                      >
                        <div
                          class="v-input__icon v-input__icon--prepend"
                        >
                          <span
                            aria-hidden="true"
                            class="v-icon notranslate theme--light"
                          >
                            <svg
                              aria-hidden="true"
                              class="v-icon__svg"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                        >
                          <fieldset
                            aria-hidden="true"
                          >
                            <legend
                              style="width: 0px;"
                            >
                              <span
                                class="notranslate"
                              >
                                ​
                              </span>
                            </legend>
                          </fieldset>
                          <div
                            class="v-text-field__slot"
                          >
                            <label
                              class="v-label theme--light"
                              style="left: 0px; position: absolute;"
                            >
                              請求年月
                            </label>
                            <input
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <v-dialog-stub
                      closedelay="0"
                      contentclass=""
                      data-z-date-field-dialog=""
                      opendelay="0"
                      origin="center center"
                      retainfocus="true"
                      transition="dialog-transition"
                      width="290px"
                    >
                      <v-date-picker-stub
                        data-z-date-field-picker=""
                        dayformat="[Function]"
                        eventcolor="warning"
                        firstdayofweek="1"
                        headerdateformat="[Function]"
                        locale="ja-JP"
                        localefirstdayofyear="0"
                        max="2028-05-17"
                        min="1920-01-01"
                        nexticon="$next"
                        nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                        nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                        notitle="true"
                        previcon="$prev"
                        prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                        prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                        selecteditemstext="$vuetify.datePicker.itemsSelected"
                        showcurrent="true"
                        titledateformat="[Function]"
                        type="month"
                        width="290"
                        yearformat="[Function]"
                      >
                        <v-spacer-stub
                          tag="div"
                        />
                        <a
                          class="v-btn-stub"
                          color="primary"
                          data-z-date-field-button-clear=""
                          text=""
                        >
                          クリア
                        </a>
                        <a
                          class="v-btn-stub"
                          color="primary"
                          data-z-date-field-button-cancel=""
                          text=""
                        >
                          キャンセル
                        </a>
                      </v-date-picker-stub>
                    </v-dialog-stub>
                  </div>
                </v-col-stub>
                <v-col-stub
                  cols="12"
                  md="4"
                  sm="6"
                  tag="div"
                  xl="3"
                >
                  <div
                    class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                    hide-details=""
                    label="支払方法"
                    prepend-icon="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
                    value=""
                  >
                    <div
                      class="v-input__prepend-outer"
                    >
                      <div
                        class="v-input__icon v-input__icon--prepend"
                      >
                        <span
                          aria-hidden="true"
                          class="v-icon notranslate theme--light"
                        >
                          <svg
                            aria-hidden="true"
                            class="v-icon__svg"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="v-input__slot"
                        role="button"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <label
                            class="v-label v-label--active theme--light"
                            style="left: 0px; position: absolute;"
                          >
                            支払方法
                          </label>
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              指定しない
                            </div>
                            <input
                              aria-readonly="false"
                              autocomplete="off"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </v-col-stub>
                <v-col-stub
                  cols="12"
                  md="4"
                  sm="6"
                  tag="div"
                  xl="3"
                >
                  <div
                    class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                    hide-details=""
                    label="利用サービス"
                    prepend-icon="M3,5H9V11H3V5M5,7V9H7V7H5M11,7H21V9H11V7M11,15H21V17H11V15M5,20L1.5,16.5L2.91,15.09L5,17.17L9.59,12.59L11,14L5,20Z"
                    value=""
                  >
                    <div
                      class="v-input__prepend-outer"
                    >
                      <div
                        class="v-input__icon v-input__icon--prepend"
                      >
                        <span
                          aria-hidden="true"
                          class="v-icon notranslate theme--light"
                        >
                          <svg
                            aria-hidden="true"
                            class="v-icon__svg"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M3,5H9V11H3V5M5,7V9H7V7H5M11,7H21V9H11V7M11,15H21V17H11V15M5,20L1.5,16.5L2.91,15.09L5,17.17L9.59,12.59L11,14L5,20Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="v-input__slot"
                        role="button"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <label
                            class="v-label v-label--active theme--light"
                            style="left: 0px; position: absolute;"
                          >
                            利用サービス
                          </label>
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              指定しない
                            </div>
                            <input
                              aria-readonly="false"
                              autocomplete="off"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </v-col-stub>
                <v-col-stub
                  cols="12"
                  md="4"
                  sm="6"
                  tag="div"
                  xl="3"
                >
                  <div
                    class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                    hide-details=""
                    label="請求結果"
                    prepend-icon="M7,2H17A2,2 0 0,1 19,4V20A2,2 0 0,1 17,22H7A2,2 0 0,1 5,20V4A2,2 0 0,1 7,2M7,4V8H17V4H7M7,10V12H9V10H7M11,10V12H13V10H11M15,10V12H17V10H15M7,14V16H9V14H7M11,14V16H13V14H11M15,14V16H17V14H15M7,18V20H9V18H7M11,18V20H13V18H11M15,18V20H17V18H15Z"
                    value=""
                  >
                    <div
                      class="v-input__prepend-outer"
                    >
                      <div
                        class="v-input__icon v-input__icon--prepend"
                      >
                        <span
                          aria-hidden="true"
                          class="v-icon notranslate theme--light"
                        >
                          <svg
                            aria-hidden="true"
                            class="v-icon__svg"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M7,2H17A2,2 0 0,1 19,4V20A2,2 0 0,1 17,22H7A2,2 0 0,1 5,20V4A2,2 0 0,1 7,2M7,4V8H17V4H7M7,10V12H9V10H7M11,10V12H13V10H11M15,10V12H17V10H15M7,14V16H9V14H7M11,14V16H13V14H11M15,14V16H17V14H15M7,18V20H9V18H7M11,18V20H13V18H11M15,18V20H17V18H15Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="v-input__slot"
                        role="button"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <label
                            class="v-label v-label--active theme--light"
                            style="left: 0px; position: absolute;"
                          >
                            請求結果
                          </label>
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              指定しない
                            </div>
                            <input
                              aria-readonly="false"
                              autocomplete="off"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </v-col-stub>
                <v-col-stub
                  class="ml-auto"
                  cols="12"
                  md="4"
                  sm="6"
                  tag="div"
                  xl="2"
                >
                  <a
                    block=""
                    class="v-btn-stub"
                    color="primary"
                    depressed=""
                    type="submit"
                  >
                    検索
                  </a>
                </v-col-stub>
              </v-row-stub>
            </form>
          </transition-stub>
        </v-container-stub>
        <div
          class="v-data-table__wrapper"
        >
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <thead
              class="v-data-table-header"
            >
              <tr>
                <th
                  aria-label=""
                  class="text-start"
                  role="columnheader"
                  scope="col"
                  style="width: 1px; min-width: 1px;"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </th>
                <th
                  aria-label="サービス提供年月"
                  class="text-start th-provided-in"
                  role="columnheader"
                  scope="col"
                  style="width: 13%; min-width: 13%;"
                >
                  <span>
                    サービス提供年月
                  </span>
                </th>
                <th
                  aria-label="請求年月日"
                  class="text-start th-issued-on"
                  role="columnheader"
                  scope="col"
                  style="width: 13%; min-width: 13%;"
                >
                  <span>
                    請求年月日
                  </span>
                </th>
                <th
                  aria-label="利用者"
                  class="text-start th-user"
                  role="columnheader"
                  scope="col"
                  style="width: 13%; min-width: 13%;"
                >
                  <span>
                    利用者
                  </span>
                </th>
                <th
                  aria-label="事業所"
                  class="text-start th-office"
                  role="columnheader"
                  scope="col"
                  style="width: 12%; min-width: 12%;"
                >
                  <span>
                    事業所
                  </span>
                </th>
                <th
                  aria-label="合計金額"
                  class="text-end th-total-amount"
                  role="columnheader"
                  scope="col"
                  style="width: 11%; min-width: 11%;"
                >
                  <span>
                    合計金額
                  </span>
                </th>
                <th
                  aria-label="支払方法"
                  class="text-start th-payment-method"
                  role="columnheader"
                  scope="col"
                  style="width: 12%; min-width: 12%;"
                >
                  <span>
                    支払方法
                  </span>
                </th>
                <th
                  aria-label="請求結果"
                  class="text-start th-result"
                  role="columnheader"
                  scope="col"
                  style="width: 13%; min-width: 13%;"
                >
                  <span>
                    請求結果
                  </span>
                </th>
                <th
                  aria-label="入金日"
                  class="text-start th-deposited-at"
                  role="columnheader"
                  scope="col"
                  style="width: 13%; min-width: 13%;"
                >
                  <span>
                    入金日
                  </span>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  平成23年6月
                </td>
                <td
                  class="text-start"
                >
                  平20.07.31
                </td>
                <td
                  class="text-start"
                >
                  野村 真一
                </td>
                <td
                  class="text-start"
                >
                  山形
                </td>
                <td
                  class="text-end"
                >
                  207,510円
                </td>
                <td
                  class="text-start"
                >
      銀行振込
                </td>
                <td
                  class="text-start"
                >
                  未処理
                </td>
                <td
                  class="text-start"
                >
                  昭57.06.01
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  平成24年9月
                </td>
                <td
                  class="text-start"
                >
                  昭46.08.31
                </td>
                <td
                  class="text-start"
                >
                  伊沢 奈々
                </td>
                <td
                  class="text-start"
                >
                  デイ都立家政
                </td>
                <td
                  class="text-end"
                >
                  193,443円
                </td>
                <td
                  class="text-start"
                >
      口座振替
                </td>
                <td
                  class="text-start"
                >
                  入金済
                </td>
                <td
                  class="text-start"
                >
                  昭56.09.03
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  昭和58年8月
                </td>
                <td
                  class="text-start"
                >
                  平03.05.26
                </td>
                <td
                  class="text-start"
                >
                  畠山 宏
                </td>
                <td
                  class="text-start"
                >
                  デイ中野坂上
                </td>
                <td
                  class="text-end"
                >
                  166,067円
                </td>
                <td
                  class="text-start"
                >
      口座振替
                </td>
                <td
                  class="text-start"
                >
                  未処理
                </td>
                <td
                  class="text-start"
                >
                  平29.10.05
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  昭和50年11月
                </td>
                <td
                  class="text-start"
                >
                  平06.10.05
                </td>
                <td
                  class="text-start"
                >
                  坪井 淳子
                </td>
                <td
                  class="text-start"
                >
                  仙台
                </td>
                <td
                  class="text-end"
                >
                  215,145円
                </td>
                <td
                  class="text-start"
                >
      集金
                </td>
                <td
                  class="text-start"
                >
                  未処理
                </td>
                <td
                  class="text-start"
                >
                  昭58.06.14
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  昭和62年2月
                </td>
                <td
                  class="text-start"
                >
                  令02.09.10
                </td>
                <td
                  class="text-start"
                >
                  早川 仁晶
                </td>
                <td
                  class="text-start"
                >
                  久留米
                </td>
                <td
                  class="text-end"
                >
                  185,051円
                </td>
                <td
                  class="text-start"
                >
      銀行振込
                </td>
                <td
                  class="text-start"
                >
                  入金済
                </td>
                <td
                  class="text-start"
                >
                  平15.09.17
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  昭和46年3月
                </td>
                <td
                  class="text-start"
                >
                  昭56.08.29
                </td>
                <td
                  class="text-start"
                >
                  椎名 宏行
                </td>
                <td
                  class="text-start"
                >
                  奈良
                </td>
                <td
                  class="text-end"
                >
                  125,454円
                </td>
                <td
                  class="text-start"
                >
      口座振替
                </td>
                <td
                  class="text-start"
                >
                  処理中
                </td>
                <td
                  class="text-start"
                >
                  平06.05.04
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  昭和47年3月
                </td>
                <td
                  class="text-start"
                >
                  昭61.04.19
                </td>
                <td
                  class="text-start"
                >
                  浅利 惇
                </td>
                <td
                  class="text-start"
                >
                  四日市
                </td>
                <td
                  class="text-end"
                >
                  194,360円
                </td>
                <td
                  class="text-start"
                >
      口座振替
                </td>
                <td
                  class="text-start"
                >
                  処理中
                </td>
                <td
                  class="text-start"
                >
                  平27.09.09
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  令和3年9月
                </td>
                <td
                  class="text-start"
                >
                  令05.09.19
                </td>
                <td
                  class="text-start"
                >
                  川西 幸平
                </td>
                <td
                  class="text-start"
                >
                  姫路
                </td>
                <td
                  class="text-end"
                >
                  215,683円
                </td>
                <td
                  class="text-start"
                >
      銀行振込
                </td>
                <td
                  class="text-start"
                >
                  処理中
                </td>
                <td
                  class="text-start"
                >
                  平13.03.15
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  昭和46年5月
                </td>
                <td
                  class="text-start"
                >
                  平20.01.02
                </td>
                <td
                  class="text-start"
                >
                  川西 幸平
                </td>
                <td
                  class="text-start"
                >
                  和歌山
                </td>
                <td
                  class="text-end"
                >
                  190,014円
                </td>
                <td
                  class="text-start"
                >
      銀行振込
                </td>
                <td
                  class="text-start"
                >
                  入金済
                </td>
                <td
                  class="text-start"
                >
                  昭62.08.05
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class="text-start"
                >
                  <div
                    class="v-data-table__checkbox v-simple-checkbox"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="text-start"
                >
                  平成10年9月
                </td>
                <td
                  class="text-start"
                >
                  平19.04.11
                </td>
                <td
                  class="text-start"
                >
                  市川 美佳
                </td>
                <td
                  class="text-start"
                >
                  姫路
                </td>
                <td
                  class="text-end"
                >
                  166,130円
                </td>
                <td
                  class="text-start"
                >
      銀行振込
                </td>
                <td
                  class="text-start"
                >
                  請求なし
                </td>
                <td
                  class="text-start"
                >
                  平23.10.29
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <!---->
    </v-card-stub>
  </div>
  <z-fab-speed-dial-stub
    data-fab=""
    icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
  >
    <z-fab-speed-dial-button-stub
      color="secondary"
      data-withdrawal-transactions-download=""
      icon="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"
      to="/withdrawal-transactions"
    >
      全銀ファイルダウンロード
    </z-fab-speed-dial-button-stub>
    <z-fab-speed-dial-button-stub
      color="secondary"
      data-withdrawal-transactions-upload=""
      icon="M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
      to="/user-billing-bulk-update/new"
    >
      全銀ファイルアップロード
    </z-fab-speed-dial-button-stub>
  </z-fab-speed-dial-stub>
  <z-progress-stub
    message="処理中です。しばらくお待ちください。"
    opacity="0.8"
    zindex="7"
  />
  <v-dialog-stub
    closedelay="0"
    contentclass=""
    data-date-confirm-dialog="depositedOn"
    opendelay="0"
    origin="center center"
    persistent="true"
    retainfocus="true"
    transition="dialog-transition"
    width="400"
  >
    <v-card-stub
      loaderheight="4"
      tag="div"
    >
      <!---->
      <v-card-text-stub
        tag="div"
      >
        <p
          class="message"
        >
          入金日を選択してください
        </p>
        <div>
          <v-date-picker-stub
            dayformat="[Function]"
            eventcolor="warning"
            firstdayofweek="1"
            full-width=""
            fullwidth="true"
            headerdateformat="[Function]"
            locale="ja-JP"
            localefirstdayofyear="0"
            max="2018-05-17"
            min="1920-01-01"
            nexticon="$next"
            nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
            nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
            notitle="true"
            previcon="$prev"
            prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
            prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
            selecteditemstext="$vuetify.datePicker.itemsSelected"
            titledateformat="[Function]"
            type="date"
            width="290"
            yearformat="[Function]"
          />
          <div
            class="mt-1"
            data-error=""
            vid="date"
          >
            <input
              type="hidden"
            />
            <!---->
          </div>
        </div>
      </v-card-text-stub>
      <v-card-actions-stub
        tag="div"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="grey"
          data-button-negative=""
          text=""
        >
          <span>
            キャンセル
          </span>
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-button-positive=""
          text=""
          type="submit"
        >
          <span>
            登録
          </span>
        </a>
      </v-card-actions-stub>
    </v-card-stub>
  </v-dialog-stub>
  <v-dialog-stub
    closedelay="0"
    contentclass=""
    data-date-confirm-dialog="download"
    opendelay="0"
    origin="center center"
    persistent="true"
    retainfocus="true"
    transition="dialog-transition"
    width="400"
  >
    <v-card-stub
      loaderheight="4"
      tag="div"
    >
      <!---->
      <v-card-text-stub
        tag="div"
      >
        <p
          class="message"
        >
          印字する発行日を選択してください
        </p>
        <div>
          <v-date-picker-stub
            dayformat="[Function]"
            eventcolor="warning"
            firstdayofweek="1"
            full-width=""
            fullwidth="true"
            headerdateformat="[Function]"
            locale="ja-JP"
            localefirstdayofyear="0"
            max="2028-05-17"
            min="1920-01-01"
            nexticon="$next"
            nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
            nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
            notitle="true"
            previcon="$prev"
            prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
            prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
            selecteditemstext="$vuetify.datePicker.itemsSelected"
            titledateformat="[Function]"
            type="date"
            width="290"
            yearformat="[Function]"
          />
          <div
            class="mt-1"
            data-error=""
            vid="date"
          >
            <input
              type="hidden"
            />
            <!---->
          </div>
        </div>
      </v-card-text-stub>
      <v-card-actions-stub
        tag="div"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="grey"
          data-button-negative=""
          text=""
        >
          <span>
            キャンセル
          </span>
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-button-positive=""
          text=""
          type="submit"
        >
          <span>
            ダウンロード
          </span>
        </a>
      </v-card-actions-stub>
    </v-card-stub>
  </v-dialog-stub>
</div>
`;
